--- a/style.css
+++ b/style.css
@@ -1,27 +1,21 @@
 <style>
-
-body
-{
+body{
   background-color: lightblue;
 }
-h1
-{
+h1{
   font: italic 1.2em "Fira Sans", serif;
   color:blue;
   font-size:56px;
 }
-h2
-{
+h2{
   color:red;
   font-size:28px;
 }
-h3
-{
+h3{
   color:green;
   font-size:28px;
 }
-p
-{
+p{
   font-size:14px;
   font-weight:bold;
 }
