--- a/style.css
+++ b/style.css
@@ -1,8 +1,19 @@
 <style>
 body{
-  background-color: darkslategrey;
-  color: azure;
+  background: #222;
+  font-family: 'Times New Roman', sans-serif;
+  font-weight: 400;
 }
+
+.navbar {
+  width: 80%;
+  margin: 0 auto;
+}
+
+header {
+  background: #55d6aa;
+}
+
 h1{
   font: italic 1.2em "Fira Sans", serif;
   color:blue;
