--- a/style.css
+++ b/style.css
@@ -16,6 +16,12 @@ nav ul {
   list-style: none;
 }
 
+nav li {
+  display: inline-block;
+  margin: 0 35 px;
+  padding-top: 25 px;
+}
+
 header {
   background: #55d6aa;
 }
