--- a/style.css
+++ b/style.css
@@ -22,6 +22,12 @@ nav li {
   padding-top: 25 px;
 }
 
+nav a {
+  color #555;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
 header {
   background: #55d6aa;
 }
