--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 <style>
 body{
-  background-color: darkslategrey;
+  margin: 100px;
+  background-color: #008080;
   font-family: 'Times New Roman', sans-serif;
   font-weight: 400;
 }
