--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 <style>
-body{
-  margin: 100px;
-  background-color: #008080;
+body {
+  margin: 100 px;
+  background: #008080;
   font-family: 'Times New Roman', sans-serif;
   font-weight: 400;
 }
