--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ body {
   margin: 0 auto;
 }
 
+nav {
+  float: right;
+}
+
 nav ul {
   margin: 100px;
   padding: 0;
@@ -19,7 +23,7 @@ nav ul {
 
 nav li {
   display: inline-block;
-  margin-left: 400px;
+  margin-left: 200px;
   padding-top: 40px;
   
   position: relative;
