--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 <style>
 body {
   margin: 25px 100px 50px 100px;
-  background: #222;
+  background: blue;
   font-family: 'Times New Roman', sans-serif;
   font-weight: 400;
 }
@@ -63,6 +63,18 @@ header::after {
   display: table;
   clear: both;
 }
+
+.what {
+  h1 {
+    
+
+
+
+
+
+
+
+
 
 h1{
   font: italic 1.2em "Fira Sans", serif;
