--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
 .navbar {
   width: 80%;
   margin: 0 auto;
+  font-size: 60px;
 }
 
 nav {
@@ -24,7 +25,7 @@ nav ul {
 
 nav li {
   display: inline-block;
-  margin-left: 100px;
+  margin-left: 200px;
   padding-top: 30px;
   
   position: relative;
