--- a/style.css
+++ b/style.css
@@ -68,7 +68,8 @@ header::after {
 
 .what {
   margin: 70px;
-  border: 1px solid #4CAF50;
+  margin-right: 900px;
+  border: 10px solid #000000;
 }
     
     
