--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ nav ul {
 
 nav li {
   display: inline-block;
-  margin-left: 200px;
+  margin-right: 400px;
   padding-top: 30px;
   
   position: relative;
