--- a/style.css
+++ b/style.css
@@ -71,6 +71,12 @@ header::after {
   margin-right: 900px;
   border: 10px solid #000000;
 }
+
+.bts {
+  margin: 70px;
+  margin-left: 900px;
+  border: 10px solid #000000;
+}
     
     
 
