--- a/style.css
+++ b/style.css
@@ -69,31 +69,31 @@ header::after {
 
 .what {
   margin-left: 300px;
-  margin-right:300px
+  margin-right: 300px;
   border: 10px solid #000000;
 }
 
 .bts {
   margin-left: 300px;
-  margin-right:300px
+  margin-right: 300px;
   border: 10px solid #000000;
 }
 
 .btsbias {
   margin-left: 300px;
-  margin-right:300px
+  margin-right: 300px;
   border: 10px solid #000000;
 }
 
 .twice {
   margin-left: 300px;
-  margin-right:300px
+  margin-right: 300px;
   border: 10px solid #000000;
 }
 
 .loona {
   margin-left: 300px;
-  margin-right:300px
+  margin-right: 300px;
   border: 10px solid #000000;
 }
     
